--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<li><a href="#intro">Intro</a></li>
 						<li><a href="#one">What I Do</a></li>
 						<li><a href="#two">Who I Am</a></li>
-						<li><a href="#work">My Work</a></li>
+						<li><a href="#projects">Projects</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -30,7 +30,6 @@
 						<h2>Hey!</h2>
 					</header>
 					<p>I'm <strong>Sakshi Singh</strong>, an aspiring AI engineer with a passion for transforming data into intelligent solutions.<br />
-						<!-- <p></p> -->
 					<footer>
 						<a href="#one" class="button style3 down">More</a>
 					</footer>
@@ -43,9 +42,14 @@
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<ul style="list-style-type:square;">
+						<li>Develop AI and machine learning models.</li>
+						<li>Proficient in Python, C++ and machine learning concepts.</li>
+						<li>Skilled in frontend development technologies.</li>
+						<li>Lead tech initiatives and foster collaboration in emerging technologies.</li>
+					</ul>
+						 
+						
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -56,42 +60,38 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<a href="https://www.linkedin.com/in/sakshisingh9317" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
+					<a href="https://github.com/lazy-wav" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a>
+					<ul style="list-style-type:square;">
+						<li>Computer Science & Engineering student at Guru Gobind Singh Indraprastha University</li>
+						<li>Passionate about AI and ML, focusing on developing innovative solutions.</li>
+						<li>Incoming Software Engineering Fellow at Headstarter AI.</li>
+						<li>Chapter Head at Geek Room HMRITM, driving tech community engagement.</li>
+					</ul>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<a href="#projects" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Work -->
-			<section id="work" class="main style3 primary">
+			<section id="projects" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<h2>Projects</h2>
 					</header>
 
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
+								<a href="images/fulls/01.png" class="image fit"><img src="images/thumbs/01.png" title="" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.png" title="" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
+								<a href="images/fulls/03.png" class="image fit"><img src="images/thumbs/03.png" title="" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
+								<a href="images/fulls/04.png" class="image fit"><img src="images/thumbs/04.png" title="" alt="" /></a>
 							</article>
 						</div>
 
@@ -103,17 +103,17 @@
 				<div class="content">
 					<header>
 						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<p>For any queries or suggestions, please send a message.</p>
 					</header>
 					<div class="box">
-						<form method="post" action="#">
+						<form action="https://formsubmit.co/c5d5f6a0e7f2b45ce64459f30651b8bc" method="POST" >
 							<div class="fields">
 								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
 								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
 								<div class="field"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
 							</div>
 							<ul class="actions special">
-								<li><input type="submit" value="Send Message" /></li>
+								<li><input type="submit" value="Send Message"  /></li>
 							</ul>
 						</form>
 					</div>
@@ -125,17 +125,15 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+						<li><a href="https://twitter.com/Sakshi9317" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/lazy-wav" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/sakshisingh9317" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://medium.com/@s.sakshi9317" target="_blank" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
 					</ul>
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li> Created with ♥ by Sakshi Singh</li>
 					</ul>
 
 			</footer>
